--- a/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/templates/hpa.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/templates/hpa.yaml
@@ -1,6 +1,9 @@
 {{- if $.Values.autoscaling.enabled }}
----
+{{- if semverCompare ">=1.16-0" .Capabilities.KubeVersion.GitVersion }}
 apiVersion: autoscaling/v2beta2
+{{- else }}
+apiVersion: autoscaling/v2beta1
+{{- end }}
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ template ".Chart.Name .fullname" $ }}-hpa
@@ -11,24 +14,36 @@ spec:
     name: {{ include ".Chart.Name .fullname" $ }}
   minReplicas: {{ $.Values.autoscaling.MinReplicas  }}
   maxReplicas: {{ $.Values.autoscaling.MaxReplicas }}
-  {{- if $.Values.autoscaling.TargetMemoryUtilizationPercentage }}
   metrics:
-    - type: Resource
-      resource:
-        name: memory
-        target:
-          type: Utilization
-          averageUtilization: {{ $.Values.autoscaling.TargetMemoryUtilizationPercentage }}
-    {{- end }}
-    {{- if $.Values.autoscaling.TargetCPUUtilizationPercentage }}
-    - type: Resource
-      resource:
-        name: cpu
-        target:
-          type: Utilization
-          averageUtilization:  {{ $.Values.autoscaling.TargetCPUUtilizationPercentage }}
-    {{- end }}
-    {{- if $.Values.autoscaling.extraMetrics }}
-  {{toYaml $.Values.autoscaling.extraMetrics | indent 4 }}
-  {{- end}}
+  {{- if $.Values.autoscaling.TargetMemoryUtilizationPercentage }}
+  - type: Resource
+    resource:
+      name: memory
+      {{- if semverCompare ">=1.16-0" .Capabilities.KubeVersion.GitVersion }}
+      target:
+        type: Utilization
+        averageUtilization: {{ $.Values.autoscaling.TargetMemoryUtilizationPercentage }}
+      {{- else }}
+      targetAverageUtilization: {{ $.Values.autoscaling.TargetMemoryUtilizationPercentage }}
+      {{- end }}
+  {{- end }}
+  {{- if $.Values.autoscaling.TargetCPUUtilizationPercentage }}
+  - type: Resource
+    resource:
+      name: cpu
+      {{- if semverCompare ">=1.16-0" .Capabilities.KubeVersion.GitVersion }}
+      target:
+        type: Utilization
+        averageUtilization: {{ $.Values.autoscaling.TargetCPUUtilizationPercentage }}
+      {{- else }}
+      targetAverageUtilization: {{ $.Values.autoscaling.TargetCPUUtilizationPercentage }}
+      {{- end }}
+  {{- end }}
+    {{- if and $.Values.autoscaling.extraMetrics (semverCompare ">=1.16-0" .Capabilities.KubeVersion.GitVersion) }}
+  {{- toYaml $.Values.autoscaling.extraMetrics | nindent 2 }}
+    {{- end}}
+  {{- if and $.Values.autoscaling.behavior (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
+  behavior:
+    {{- toYaml $.Values.autoscaling.behavior | nindent 4 }}
+  {{- end }}
   {{- end }}
