--- a/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/values.yaml
@@ -12,8 +12,8 @@ ContainerPort:
     port: 8080
     servicePort: 80
     envoyPort: 8799
-    useHTTP2: true
-    supportStreaming: true
+    useHTTP2: false
+    supportStreaming: false
     idleTimeout: 1800s
 #    servicemonitor:
 #      enabled: true
@@ -52,6 +52,23 @@ autoscaling:
   MaxReplicas: 2
   TargetCPUUtilizationPercentage: 90
   TargetMemoryUtilizationPercentage: 80
+  behavior: {}
+#    scaleDown:
+#      stabilizationWindowSeconds: 300
+#      policies:
+#      - type: Percent
+#        value: 100
+#        periodSeconds: 15
+#    scaleUp:
+#      stabilizationWindowSeconds: 0
+#      policies:
+#      - type: Percent
+#        value: 100
+#        periodSeconds: 15
+#      - type: Pods
+#        value: 4
+#        periodSeconds: 15
+#      selectPolicy: Max
   extraMetrics: []
 #    - external:
 #        metricName: pubsub.googleapis.com|subscription|num_undelivered_messages
@@ -77,14 +94,13 @@ server:
    image_tag: 1-95af053
    image: ""
 
+EnvVariablesFromFieldPath:
+- name: POD_NAME
+  fieldPath: metadata.name
 
 EnvVariables:
   - name: FLASK_ENV
     value: qa
-
-EnvVariablesFromFieldPath:
-- name: POD_NAME
-  fieldPath: metadata.name
 
 LivenessProbe:
   Path: /
@@ -137,6 +153,7 @@ prometheusRule:
 
 ingress:
   enabled: false
+  className: nginx
   annotations: {}
 #    nginx.ingress.kubernetes.io/rewrite-target: /
 #    nginx.ingress.kubernetes.io/ssl-redirect: "false"
@@ -147,8 +164,14 @@ ingress:
 
   hosts:
     - host: chart-example1.local
+      pathType: "ImplementationSpecific"
       paths:
         - /example1
+    - host: chart-example2.local
+      pathType: "ImplementationSpecific"
+      paths:
+        - /example2
+        - /example2/healthz
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
@@ -156,6 +179,7 @@ ingress:
 
 ingressInternal:
   enabled: false
+  className: nginx-internal
   annotations: {}
  #    kubernetes.io/ingress.class: nginx
  #    kubernetes.io/tls-acme: "true"
@@ -164,8 +188,14 @@ ingressInternal:
 
   hosts:
     - host: chart-example1.internal
+      pathType: "ImplementationSpecific"
       paths:
         - /example1
+    - host: chart-example2.internal
+      pathType: "ImplementationSpecific"
+      paths:
+        - /example2
+        - /example2/healthz
   tls: []
  #  - secretName: chart-example-tls
  #    hosts:
@@ -325,7 +355,7 @@ rawYaml: []
 #    type: ClusterIP
 
 envoyproxy:
- image: envoyproxy/envoy:v1.14.1
+ image: quay.io/devtron/envoy:v1.14.1
  configMapName: ""
  resources:
    limits:
