--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/app-values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/app-values.yaml
@@ -15,8 +15,8 @@ ContainerPort:
     port: 8080
     servicePort: 80
     envoyPort: 8799
-    useHTTP2: true
-    supportStreaming: true
+    useHTTP2: false
+    supportStreaming: false
     idleTimeout: 1800s
 #    servicemonitor:
 #      enabled: true
@@ -75,19 +75,22 @@ ReadinessProbe:
 
 ingress:
   enabled: false
-  annotations:
-    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
-    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
-    kubernetes.io/ingress.class: nginx
+  className: nginx
+  annotations: {}
+#    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
+#    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
+#    kubernetes.io/ingress.class: nginx
 #    nginx.ingress.kubernetes.io/rewrite-target: /$2
 #    nginx.ingress.kubernetes.io/canary: "true"
 #    nginx.ingress.kubernetes.io/canary-weight: "10"
 
   hosts:
     - host: chart-example1.local
+      pathType: "ImplementationSpecific"
       paths:
         - /example1
     - host: chart-example2.local
+      pathType: "ImplementationSpecific"
       paths:
         - /example2
         - /example2/healthz
@@ -98,6 +101,7 @@ ingress:
 
 ingressInternal:
   enabled: false
+  className: nginx-internal
   annotations: {}
  #    kubernetes.io/ingress.class: nginx
  #    kubernetes.io/tls-acme: "true"
@@ -106,9 +110,11 @@ ingressInternal:
 
   hosts:
     - host: chart-example1.internal
+      pathType: "ImplementationSpecific"
       paths:
         - /example1
     - host: chart-example2.internal
+      pathType: "ImplementationSpecific"
       paths:
         - /example2
         - /example2/healthz
@@ -182,6 +188,24 @@ autoscaling:
   MaxReplicas: 2
   TargetCPUUtilizationPercentage: 70
   TargetMemoryUtilizationPercentage: 80
+  behavior: {}
+#    scaleDown:
+#      stabilizationWindowSeconds: 300
+#      policies:
+#      - type: Percent
+#        value: 100
+#        periodSeconds: 15
+#    scaleUp:
+#      stabilizationWindowSeconds: 0
+#      policies:
+#      - type: Percent
+#        value: 100
+#        periodSeconds: 15
+#      - type: Pods
+#        value: 4
+#        periodSeconds: 15
+#      selectPolicy: Max
+
   extraMetrics: []
 #    - external:
 #        metricName: pubsub.googleapis.com|subscription|num_undelivered_messages
@@ -204,7 +228,7 @@ servicemonitor:
   additionalLabels: {}
 
 envoyproxy:
-  image: envoyproxy/envoy:v1.14.1
+  image: quay.io/devtron/envoy:v1.14.1
   configMapName: ""
   resources:
     limits:
