--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/test_values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/test_values.yaml
@@ -60,6 +60,24 @@ autoscaling:
   MaxReplicas: 2
   TargetCPUUtilizationPercentage: 90
   TargetMemoryUtilizationPercentage: 80
+  behavior: {}
+#    scaleDown:
+#      stabilizationWindowSeconds: 300
+#      policies:
+#      - type: Percent
+#        value: 100
+#        periodSeconds: 15
+#    scaleUp:
+#      stabilizationWindowSeconds: 0
+#      policies:
+#      - type: Percent
+#        value: 100
+#        periodSeconds: 15
+#      - type: Pods
+#        value: 4
+#        periodSeconds: 15
+#      selectPolicy: Max
+
   extraMetrics: []
 #    - external:
 #        metricName: pubsub.googleapis.com|subscription|num_undelivered_messages
@@ -141,7 +159,8 @@ prometheusRule:
 
 
 ingress:
-  enabled: false
+  enabled: true
+  className: nginx
   annotations: {}
 #    nginx.ingress.kubernetes.io/rewrite-target: /
 #    nginx.ingress.kubernetes.io/ssl-redirect: "false"
@@ -149,22 +168,28 @@ ingress:
 #    kubernetes.io/tls-acme: "true"
 #    nginx.ingress.kubernetes.io/canary: "true"
 #    nginx.ingress.kubernetes.io/canary-weight: "10"
-
   hosts:
     - host: chart-example1.local
+      pathType: "ImplementationSpecific"
       paths:
         - /example1
     - host: chart-example2.local
+      pathType: "ImplementationSpecific"
       paths:
         - /example2
         - /example2/healthz
   tls: []
+### Legacy Ingress Format ##
+#  host: abc.com
+#  path: "/"
+#  pathType: "ImplementationSpecific"
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
 
 ingressInternal:
-  enabled: false
+  enabled: true
+  className: nginx-internal
   annotations: {}
  #    kubernetes.io/ingress.class: nginx
  #    kubernetes.io/tls-acme: "true"
@@ -173,13 +198,14 @@ ingressInternal:
 
   hosts:
     - host: chart-example1.internal
+      pathType: "ImplementationSpecific"
       paths:
         - /example1
     - host: chart-example2.internal
+      pathType: "ImplementationSpecific"
       paths:
         - /example2
         - /example2/healthz
-  tls: []
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
