--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/test_values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/test_values.yaml
@@ -117,6 +117,11 @@ LivenessProbe:
   successThreshold: 1
   timeoutSeconds: 5
   failureThreshold: 3
+  httpHeaders: []
+    - name: Custom-Header
+      value: abc
+    - name: Custom-Header2
+      value: xyz
 
 ReadinessProbe:
   Path: /
@@ -126,6 +131,9 @@ ReadinessProbe:
   successThreshold: 1
   timeoutSeconds: 5
   failureThreshold: 3
+  httpHeaders: []
+    - name: Custom-Header
+      value: abc
 
 prometheus:
   release: monitoring
