--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/values.yaml
@@ -110,6 +110,9 @@ LivenessProbe:
   successThreshold: 1
   timeoutSeconds: 5
   failureThreshold: 3
+  httpHeaders: []
+#    - name: Custom-Header
+#      value: abc
 
 ReadinessProbe:
   Path: /
@@ -119,6 +122,9 @@ ReadinessProbe:
   successThreshold: 1
   timeoutSeconds: 5
   failureThreshold: 3
+  httpHeaders: []
+#    - name: Custom-Header
+#      value: abc
 
 prometheus:
   release: monitoring
