--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/app-values.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/app-values.yaml
@@ -1,4 +1,14 @@
 # Mandatory configs
+kind: Job
+
+jobConfigs:
+  backoffLimit: 5
+  activeDeadlineSeconds: 100
+  parallelism: 1
+  completions: 2
+  suspend: false
+  ttlSecondsAfterFinished: 100
+  
 cronjobConfigs:
   schedule: "* * * * *"
   startingDeadlineSeconds: 100
