restartPolicy error fixed

--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/job.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/templates/job.yaml
@@ -60,7 +60,7 @@ spec:
 {{- end }}
     spec:
       terminationGracePeriodSeconds: {{ $.Values.GracePeriod }}
-      restartPolicy: Always
+      restartPolicy: OnFailure
 {{- if and $.Values.Spec.Affinity.Key $.Values.Spec.Affinity.Values }}
       affinity:
         nodeAffinity:
