--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/test_values.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-2-0/test_values.yaml
@@ -1,7 +1,7 @@
 # Default values for myapp.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-kind: Cronjob
+kind: Job
 
 jobConfigs:
   backoffLimit: 5
