--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
@@ -90,7 +90,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 {{ else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1beta1
-{{ else }}
+{{ else -}}
 apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
