--- a/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/test_values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/test_values.yaml
@@ -104,6 +104,13 @@ server:
     image: ""
 deploymentType: "RECREATE"
 
+topologySpreadConstraints:
+  - maxSkew: 1
+    topologyKey: zone
+    whenUnsatisfiable: DoNotSchedule
+    autoLabelSelector: true
+    customLabelSelector:
+      foo: bar
 
 EnvVariables:
   - name: FLASK_ENV
