--- a/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/values.yaml
@@ -392,8 +392,8 @@ topologySpreadConstraints: []
   # - maxSkew: 1
   #   topologyKey: zone
   #   whenUnsatisfiable: DoNotSchedule
-  #   matchLabels:
-  #     foo: bar
+  #   autoLabelSelector: true
+  #   customLabelSelector: {}
 
 envoyproxy:
  image: quay.io/devtron/envoy:v1.14.1
