Updated permissions for devtron clusterrole

--- a/manifests/yamls/serviceaccount.yaml
+++ b/manifests/yamls/serviceaccount.yaml
@@ -210,6 +210,19 @@ metadata:
   name: devtron
 rules:
 - apiGroups:
+  - batch
+  resources:
+  - jobs
+  - cronjobs
+  verbs:
+  - get
+  - list
+  - watch
+  - patch
+  - update
+  - create
+  - delete
+- apiGroups:
   - ""
   resources:
   - configmaps
