--- a/manifests/yamls/serviceaccount.yaml
+++ b/manifests/yamls/serviceaccount.yaml
@@ -264,6 +264,14 @@ rules:
   - pods/exec
   verbs:
   - create
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - list
+  - get
+  - delete
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
