--- a/cmd/external-app/Makefile
+++ b/cmd/external-app/Makefile
@@ -1,5 +1,3 @@
-#!make
-
 all: build
 
 TAG?=$(shell bash -c 'git log --pretty=format:'%h' -n 1')
@@ -10,21 +8,19 @@ REGISTRY?=686244538589.dkr.ecr.us-east-2.amazonaws.com
 BASEIMAGE?=alpine:3.9
 #BUILD_NUMBER=$$(date +'%Y%m%d-%H%M%S')
 BUILD_NUMBER := $(shell bash -c 'echo $$(date +'%Y%m%d-%H%M%S')')
-ENV_FILE?=scripts/dev-conf/envfile.env
-include $(ENV_FILE)
 export
 
 build: clean wire
-	$(ENVVAR) GOOS=$(GOOS) go build -o devtron
+	$(ENVVAR) GOOS=$(GOOS) go build -o devtron-ea
 
 wire:
 	wire
 
 clean:
-	rm -f devtron
+	rm -f devtron-ea
 
 run: build
-	./devtron
+	./devtron-ea
 
 .PHONY: build
 docker-build-image:  build
@@ -34,11 +30,3 @@ docker-build-image:  build
 docker-build-push: docker-build-image
 	docker tag devtron:${TAG}  ${REGISTRY}/devtron:${TAG}
 	docker push ${REGISTRY}/devtron:${TAG}
-
-#############################################################################
-
-build-all: build
-	make --directory ./cmd/external-app build
-
-build-ea:
-	make --directory ./cmd/external-app build
