Minor changes in examples and ingress

--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/values.yaml
@@ -159,7 +159,7 @@ prometheusRule:
 
 ingress:
   enabled: false
-  className: nginx
+  className: ""
   annotations: {}
 #    nginx.ingress.kubernetes.io/rewrite-target: /
 #    nginx.ingress.kubernetes.io/ssl-redirect: "false"
@@ -185,7 +185,7 @@ ingress:
 
 ingressInternal:
   enabled: false
-  className: nginx-internal
+  className: ""
   annotations: {}
  #    kubernetes.io/ingress.class: nginx
  #    kubernetes.io/tls-acme: "true"
